tests/snapshots/r#mod__merge_conflict.snap
---
source: tests/mod.rs
expression: ctx.redact_buffer()
---
Buffer {
    area: Rect { x: 0, y: 0, width: 60, height: 20 },
    content: [
        "🢒Merging other-branch                                       ",
        "                                                            ",
        " Unmerged                                                   ",
        " new-file                                                   ",
        "                                                            ",
        " Unstaged changes (1)                                       ",
        " conflicted   new-file…                                     ",
        "                                                            ",
        " Staged changes (1)                                         ",
        " conflicted   new-file…                                     ",
        "                                                            ",
        " Recent commits                                             ",
        " _______ main modify new-file                               ",
        " _______ add new-file                                       ",
        " _______ origin/main add initial-file                       ",
        "                                                            ",
        "                                                            ",
        "                                                            ",
        "                                                            ",
        "                                                            ",
    ],
    styles: [
        x: 0, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 0, fg: Yellow, bg: Reset, underline: Reset, modifier: BOLD,
        x: 0, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 2, fg: Yellow, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 3, fg: Magenta, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 5, fg: Yellow, bg: Reset, underline: Reset, modifier: NONE,
        x: 17, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 6, fg: Magenta, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 7, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 8, fg: Yellow, bg: Reset, underline: Reset, modifier: NONE,
        x: 15, y: 8, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 9, fg: Magenta, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 10, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 11, fg: Yellow, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 12, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 12, fg: Yellow, bg: Reset, underline: Reset, modifier: NONE,
        x: 8, y: 12, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 9, y: 12, fg: Green, bg: Reset, underline: Reset, modifier: NONE,
        x: 13, y: 12, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 13, fg: Yellow, bg: Reset, underline: Reset, modifier: NONE,
        x: 8, y: 13, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 14, fg: Yellow, bg: Reset, underline: Reset, modifier: NONE,
        x: 8, y: 14, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 9, y: 14, fg: Red, bg: Reset, underline: Reset, modifier: NONE,
        x: 20, y: 14, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
