tests/snapshots/r#mod__new_file.snap
---
source: tests/mod.rs
expression: ctx.redact_buffer()
---
Buffer {
    area: Rect { x: 0, y: 0, width: 60, height: 20 },
    content: [
        "🢒No branch                                                  ",
        "                                                            ",
        " Untracked files                                            ",
        " new-file                                                   ",
        "                                                            ",
        " Recent commits                                             ",
        "                                                            ",
        "                                                            ",
        "                                                            ",
        "                                                            ",
        "                                                            ",
        "                                                            ",
        "                                                            ",
        "                                                            ",
        "                                                            ",
        "                                                            ",
        "                                                            ",
        "                                                            ",
        "                                                            ",
        "                                                            ",
    ],
    styles: [
        x: 0, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 1, y: 0, fg: Yellow, bg: Reset, underline: Reset, modifier: BOLD,
        x: 10, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 0, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 2, fg: Yellow, bg: Reset, underline: Reset, modifier: NONE,
        x: 16, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 3, fg: Red, bg: Reset, underline: Reset, modifier: NONE,
        x: 9, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 5, fg: Yellow, bg: Reset, underline: Reset, modifier: NONE,
        x: 15, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
