tests/snapshots/r#mod__push.snap
---
source: tests/mod.rs
expression: ctx.redact_buffer()
---
Buffer {
    area: Rect { x: 0, y: 0, width: 80, height: 10 },
    content: [
        "▌On branch main                                                                 ",
        "▌Your branch is up to date with 'origin/main'.                                  ",
        "                                                                                ",
        " Recent commits                                                                 ",
        " _______ main origin/main add new-file                                          ",
        " _______ add initial-file                                                       ",
        "────────────────────────────────────────────────────────────────────────────────",
        "$ git push                                                                      ",
        "To                                                                              ",
        "   _______.._______  main -> main                                               ",
    ],
    styles: [
        x: 0, y: 0, fg: Blue, bg: Reset, underline: Reset, modifier: BOLD | DIM,
        x: 1, y: 0, fg: Yellow, bg: Reset, underline: Reset, modifier: BOLD,
        x: 0, y: 1, fg: Blue, bg: Reset, underline: Reset, modifier: DIM,
        x: 1, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 3, fg: Yellow, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 4, fg: Yellow, bg: Reset, underline: Reset, modifier: NONE,
        x: 8, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 9, y: 4, fg: Green, bg: Reset, underline: Reset, modifier: NONE,
        x: 13, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 14, y: 4, fg: Red, bg: Reset, underline: Reset, modifier: NONE,
        x: 25, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 5, fg: Yellow, bg: Reset, underline: Reset, modifier: NONE,
        x: 8, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 0, y: 7, fg: Blue, bg: Reset, underline: Reset, modifier: BOLD,
        x: 10, y: 7, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
